--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "cos-js-sdk-v5": "^1.4.21",
+    "echarts": "^5.4.3",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "screenfull": "^5.2.0",
     "vue": "2.6.10",
+    "vue-i18n": "^8.28.2",
     "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
